--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@hbsnow/rehype-sectionize": "^1.0.7",
     "@iconify-json/lucide": "^1.2.4",
+    "@iconify-json/mdi": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -29,6 +30,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@rehype-pretty/transformers": "^0.13.2",
     "@shikijs/transformers": "^1.16.3",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.11.3",
@@ -37,7 +39,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.441.0",
+    "media-chrome": "^4.2.2",
+    "phaser": "^3.86.0",
     "react": "^18.3.1",
+    "react-activity-calendar": "^2.7.1",
     "react-dom": "^18.3.1",
     "rehype-external-links": "^3.0.0",
     "rehype-katex": "^7.0.0",
