--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "remark-emoji": "^5.0.1",
     "remark-math": "^6.0.0",
     "remark-toc": "^9.0.0",
+    "sass": "^1.80.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
