--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,14 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
-    "strictNullChecks": true,
+    "strictNullChecks": true,  // null 체크 유지
+    "noUnusedLocals": false,   // 미사용 변수 경고 무시
+    "noUnusedParameters": false, // 미사용 매개변수 경고 무시
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     },
     "jsx": "react-jsx",
-    "jsxImportSource": "react",
+    "jsxImportSource": "react"
   }
 }
