--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "noUnusedLocals": false,   // 미사용 변수 경고 무시
     "noUnusedParameters": false, // 미사용 매개변수 경고 무시
     "skipLibCheck": true,
+    "ignoreDeprecations": "5.0",
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
